# OpenSC-SM

./: .gitignore  .travis.yml  Makefile.am  NEWS  README  README.md  appveyor.yml  bootstrap  configure.ac  configure.ac.in  dub.json  version.m4
C/: release_version
C/common/: .directory
C/scconf/: .directory
MacOSX/: build-package.in
doc/tools/: iasecc-tool.1.xml  tools.xml
etc/: Makefile.am  opensc.conf.in  opensc.conf.win.in
lib/windows-x86-dmd/: README.txt
lib/windows-x86_64/: README.txt
lib/windows-x86_64-dmd/: opensc.lib
packaging/debian/: README.Debian  README.source  changelog  control  copyright  libopensc2.install  libopensc2.symbols  opensc-laser.install  rules
packaging/debian.templates/: copyright
source/common/: simclist.d
source/libopensc/: asn1.d  auxdata.d  cardctl.d  cards.d  errors.d  internal.d  iso7816.d  log.d  opensc.d  pkcs15.d  sm.d  types.d
source/libsm/: sm_common.d
source/scconf/: scconf.d
src/: Makefile.am
src/common/: compat_getopt.c  simclist.h
src/libopensc/: Makefile.am  Makefile.mak  apdu.c  asn1.c  card-cardos.c  card-iasecc.c  card-laser.c  card-sc-hsm.c  card-vsctpm.c  card.c  cardctl.h  cards.h  ctx.c  internal-winscard.h  iso7816.c  laser.c  laser.h  libopensc.exports  log.c  log.h  opensc.h  padding.c  pcsc-md.c  pkcs15-cert.c  pkcs15-laser.c  pkcs15-oberthur.c  pkcs15-pin.c  pkcs15-prkey.c  pkcs15-pubkey.c  pkcs15-sc-hsm.c  pkcs15-sec.c  pkcs15-skey.c  pkcs15-syn.c  pkcs15-vsctpm.c  pkcs15.c  pkcs15.h  reader-pcsc.c  reader-pcsc.h  sc.c  sm.c  (+4 more)
src/libsm/: sm-common.h
src/minidriver/: Makefile.am  minidriver.c  versioninfo-minidriver-dll.rc.in  versioninfo-minidriver.rc.in
src/pkcs11/: Makefile.am  Makefile.mak  framework-pkcs15.c  misc.c  pkcs11-global.c  pkcs11-session.c  pkcs11-spy.c  slot.c  versioninfo-pkcs11.rc.in
src/pkcs15init/: Makefile.am  Makefile.mak  laser.profile  pkcs15-iasecc.c  pkcs15-init.h  pkcs15-laser.c  pkcs15-lib.c  pkcs15-myeid.c  pkcs15-vsctpm.c  pkcs15.profile  profile.c  vsctpm.profile
src/tools/: Makefile.am  Makefile.mak  emv-tool  emv-tool.c  iasecc-tool.c  opensc-explorer.c  opensc-notify.c  pkcs11-tool.c  pkcs15-crypt.c  pkcs15-init.c  pkcs15-tool.c  safenet-tool.c
src/ui/: notify.c
win32/: Make.rules.mak  Makefile.am  Makefile.mak  OpenSC.wxs.in  opentrust-opensc-vsctpm-build.bat
